--- a/docs/getting_started/2.md
+++ b/docs/getting_started/2.md
@@ -54,10 +54,8 @@ bank> SHOW TABLES;
 Next, generate some CSV data to seed the database.
 `dbworkload` has 2 built-in utility functions that can assist with this task:
 
-- `dbworkload util yaml`, which converts a DDL file into a _data generation definition_ file, structured in YAML.
-- `dbworkload util csv`, which takes the YAML file as input and outputs CSV files.
-
-Read the docs for util commands [`yaml`](../util/yaml.md) and [`csv`](../util/csv.md) for more information.
+- [`dbworkload util yaml`](../util/yaml.md), which converts a DDL file into a _data generation definition_ file, structured in YAML.
+- [`dbworkload util csv`](../util/csv.md), which takes the YAML file as input and outputs CSV files.
 
 Let's use the `yaml` utility with our `bank.ddl` file.
 
@@ -76,22 +74,12 @@ ref_data:
   columns:
     acc_no:
       type: sequence
-      args:
-        start: 0
     external_ref_id:
       type: uuid
-      args: {}
     created_time:
       type: timestamp
-      args:
-        start: '2000-01-01'
-        end: '2024-12-31'
-        format: '%Y-%m-%d %H:%M:%S.%f'
     acc_details:
       type: string
-      args: 
-        min: 10
-        max: 30
 ```
 
 Now let's create a CSV dataset
