--- a/docs/getting_started/4.md
+++ b/docs/getting_started/4.md
@@ -73,7 +73,7 @@ class Bank:
 
 ### Add bind parameters to read function
 
-Rename function `txn_0` to something more descriptive
+We rename function `txn_0` to something more descriptive, and add the expected bind parameter.
 
 ```python hl_lines="1 10"
     def txn_read(self, conn: psycopg.Connection):
@@ -101,7 +101,10 @@ The order transaction is made up of 2 distinct _database_ transactions:
 ### New Order
 
 This is the first of the 2 transactions of our Order workload.
-Rename function `txn_1` to `txn_new_order`.
+
+Rename function `txn_1` to `txn_new_order`, then add the required bind parameters.
+
+We then save the returning `id` along with the `acc_no` to our tuple deque.
 
 ```python hl_lines="1 3-5 14 15 19-20 22-24"
     def txn_new_order(self, conn: psycopg.Connection):
@@ -133,7 +136,7 @@ Rename function `txn_1` to `txn_new_order`.
 ### Order Execution
 
 The order execution transaction is an explicit transaction.
-Rename function `txn_2` accordingly.
+Rename function `txn_2` accordingly, then add bind parameters as usual.
 
 ```python hl_lines="1 3-4 13 17 18 28-29"
     def txn_order_exec(self, conn: psycopg.Connection):
