--- a/docs/getting_started/2.md
+++ b/docs/getting_started/2.md
@@ -118,7 +118,7 @@ Now we are ready to import the CSV file into our table `ref_data`.
 For PostgreSQL Server, at the SQL prompt, just use `COPY`
 
 ```sql
-bank=# COPY ref_data FROM '/path/to/workloads/bank/ref_data.0_0_0.csv' WITH CSV DELIMITER AS e'\t';
+bank=# COPY ref_data FROM '/path/to/workloads/bank/ref_data.0_0_0.tsv' WITH CSV DELIMITER AS e'\t';
 COPY 1000
 Time: 8.713 ms
 ```
