--- a/docs/getting_started/0.md
+++ b/docs/getting_started/0.md
@@ -2,7 +2,7 @@
 
 For this tutorial, we assume you have a CockroachDB or PostgreSQL Server running locally and accessible at `localhost`.
 
-Make sure `dbworkload` is installed on your machine, see how at [Installation](../installation.md).
+Make sure `dbworkload` is installed on your machine, see how at [Installation](../docs/installation.md).
 
 Create a directory `workloads` to store all our files.
 
