--- a/docs/getting_started/6.md
+++ b/docs/getting_started/6.md
@@ -103,6 +103,9 @@ but for the overall time taken to perform a series of functions.
 For example, you can measure the performance based on total execution time of an _Order Transaction_,
 that is, the sum of executing the `txn_new_order` and `txn_order_exec`.
 
+!!! Tip "You can now set a **schedule**"
+    Check out the `--schedule` flag.
+
 ## Save stats to CSV
 
 `dbworkload` can save the statistics to a CSV file for later inspection.
