--- a/docs/getting_started/3.md
+++ b/docs/getting_started/3.md
@@ -4,7 +4,7 @@ We now create the Python class file that describes our workload.
 
 This is going to be a regular `.py` file which we need to create from scratch.
 
-Fortunately, we can use built-in function [`dbworkload util gen_stub`](../util/gen_stub.md) to generate a skeleton
+Fortunately, we can use built-in function [`dbworkload util gen_stub`](../docs/util/gen_stub.md) to generate a skeleton
 which we can use as a base to get started.
 
 ## Create the stub file
