--- a/docs/getting_started/7.md
+++ b/docs/getting_started/7.md
@@ -7,7 +7,7 @@ In this section, we explore 2 convenient built-in functions.
 ## Terminal Charts
 
 A quick and easy way to chart the metrics in the CSV file is to do so on
-the terminal client using the [plot](../util/plot.md) utility.
+the terminal client using the [plot](../docs/util/plot.md) utility.
 
 Generally, you run `dbworkload` on a VM server which doesn't have a GUI, unlike the personal computer or MacBook
 you're reading this documentation from.
@@ -24,7 +24,7 @@ A screenshot renders the output best
 
 ## Interactive HTML charts
 
-Another charting option is using the more sophisticated util function [`html`](../util/html.md).
+Another charting option is using the more sophisticated util function [`html`](../docs/util/html.md).
 
 ```bash
 $ dbworkload util html -i Bank.20241021_145825.csv 
