fixing doc links

--- a/docs/getting_started/2.md
+++ b/docs/getting_started/2.md
@@ -54,8 +54,8 @@ bank> SHOW TABLES;
 Next, generate some CSV data to seed the database.
 `dbworkload` has 2 built-in utility functions that can assist with this task:
 
-- [`dbworkload util yaml`](../util/yaml.md), which converts a DDL file into a _data generation definition_ file, structured in YAML.
-- [`dbworkload util csv`](../util/csv.md), which takes the YAML file as input and outputs CSV files.
+- [`dbworkload util yaml`](../docs/util/yaml.md), which converts a DDL file into a _data generation definition_ file, structured in YAML.
+- [`dbworkload util csv`](../docs/util/csv.md), which takes the YAML file as input and outputs CSV files.
 
 Let's use the `yaml` utility with our `bank.ddl` file.
 
