--- a/docs/getting_started/8.md
+++ b/docs/getting_started/8.md
@@ -3,8 +3,8 @@
 This **Getting Started** used a workload meant to teach you how to code your own.
 
 If you are just looking for a simple workload to kick the tires of your cluster,
-you can try using an all-purpose workload such as the `kv` workload, see 
-the docs [here](https://github.com/dbworkload/dbworkload/blob/main/workloads/postgres/kv.md).
+you can try using an all-purpose workload such as the `kv` workload, see
+the docs [markdown page](https://github.com/dbworkload/dbworkload/blob/main/workloads/postgres/kv.md).
 
 The `kv.py` file is hosted in the same directory.
 Copy it to your local directory and run any of the sample workload options described in its README.
@@ -12,7 +12,7 @@ Copy it to your local directory and run any of the sample workload options descr
 ## Final thoughts
 
 For any question, start a [Discussion](https://github.com/dbworkload/dbworkload/discussions)
-or, if you think you run into a bug or have a new feature you'd like to add, 
+or, if you think you run into a bug or have a new feature you'd like to add,
 raise an [Issue](https://github.com/dbworkload/dbworkload/issues).
 
 Best of luck with using `dbworkload`, and if you like the project, consider putting your GitHub star!
